Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="javascripts/script.js"></script>
 
   <title>Tms</title>
-  <meta name="description" content="talent management system">
+  <meta name="description" content="Talent Management System">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -25,7 +25,7 @@
       <h1 class="title">Tms</h1>
     </header>
     <div id="container">
-      <p class="tagline">talent management system</p>
+      <p class="tagline">Talent Management System</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
@@ -47,12 +47,22 @@
 </h3>
 
 <p>Web application<br>
-Using following techonologies:<br>
-*Bootstrap<br>
-*Spring MVC 3.2.4.RELEASE<br>
-*Tiles 2.2<br>
-*mybatis<br>
-*Mysql<br></p>
+Using following techonologies:<br></p>
+
+<ul>
+<li>Bootstrap 3<br>
+</li>
+<li>JQuery <br>
+</li>
+<li>Spring MVC 3.2.4.RELEASE<br>
+</li>
+<li>Tiles 2.2<br>
+</li>
+<li>mybatis<br>
+</li>
+<li>Mysql<br>
+</li>
+</ul>
         </article>
       </div>
     </div>
