Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,17 +37,14 @@
 <h2>
 <a name="a-open-source-talent-management-system" class="anchor" href="#a-open-source-talent-management-system"><span class="octicon octicon-link"></span></a>A open source Talent Management System</h2>
 
-<h3>
-<a name="createrenixjin" class="anchor" href="#createrenixjin"><span class="octicon octicon-link"></span></a>creater:<a href="https://github.com/enixjin" class="user-mention">@enixjin</a>
-</h3>
-
-<p>Web application<br>
+<p>GitHub Page:<a href="http://enixjin.github.io/TMS">http://enixjin.github.io/TMS</a> <br>
+Web application<br>
 Using following techonologies:<br></p>
 
 <ul>
-<li>Bootstrap 3<br>
+<li>AngularJS?<br>
 </li>
-<li>JQuery <br>
+<li>Bootstrap<br>
 </li>
 <li>Spring MVC 3.2.4.RELEASE<br>
 </li>
