Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@ Using following techonologies:<br></p>
 </li>
 <li>Tiles 2.2<br>
 </li>
-<li>mybatis<br>
+<li>mybatis 3.1.1<br>
+</li>
+<li>ACTIVITI as workflow engine<br>
 </li>
 <li>Mysql<br>
 </li>
